chore: 停止追踪 *.bak 备份文件并加入 .gitignore